--- a/App/app/src/main/res/layout-port/activity_enter_trainees_details.xml
+++ b/App/app/src/main/res/layout-port/activity_enter_trainees_details.xml
@@ -399,17 +399,22 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent" >
 
-                            <RadioButton
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="@string/rd_btn_male"
-                                android:id="@+id/radioButton3" />
+                            <RadioGroup
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent">
 
-                            <RadioButton
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="@string/rd_btn_female"
-                                android:id="@+id/radioButton4" />
+                                <RadioButton
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/rd_btn_male"
+                                    android:id="@+id/radioButton3" />
+
+                                <RadioButton
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/rd_btn_female"
+                                    android:id="@+id/radioButton4" />
+                            </RadioGroup>
                         </LinearLayout>
                     </TableRow>
 
@@ -686,6 +691,8 @@
                             android:layout_column="1" />
                     </TableRow>
 
+
+
                 </TableLayout>
                 <TableLayout
                     android:layout_width="fill_parent"
@@ -735,7 +742,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/chkbox_b_minus_antioch_school"
-                            android:id="@+id/checkBox2B_minus_antioch_school"
+                            android:id="@+id/checkBoxB_minus_antioch_school"
                             android:layout_column="1" />
                     </TableRow>
 
@@ -749,7 +756,6 @@
                             android:text="@string/chkbox_m_minus_antioch_school"
                             android:id="@+id/checkBoxM_minus_antioch_school"
                             android:layout_column="1" />
-
                     </TableRow>
 
                     <TableRow
@@ -872,107 +878,6 @@
 
                     </TableRow>
 
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@color/bg_login">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:text="@string/cohort_id"
-                            android:id="@+id/textViewCohort_id"
-                            android:layout_column="0"
-                            android:textColor="@color/white"/>
-
-                        <EditText
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@color/white"
-                            android:layout_marginBottom="2dp"
-                            android:padding="2dp"
-                            android:singleLine="true"
-                            android:id="@+id/editText17"
-                            android:layout_column="1" />
-                    </TableRow>
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@color/bg_login">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:text="@string/cohort_leader"
-                            android:id="@+id/textViewCohort_leader"
-                            android:layout_column="0"
-                            android:textColor="@color/white"/>
-
-                        <EditText
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:inputType="textPersonName"
-                            android:background="@color/white"
-                            android:layout_marginBottom="2dp"
-                            android:padding="2dp"
-                            android:singleLine="true"
-                            android:id="@+id/editText18"
-                            android:layout_column="1" />
-                    </TableRow>
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@color/bg_login">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:text="@string/associate_faculty"
-                            android:id="@+id/textViewAssociate_faculty"
-                            android:layout_column="0"
-                            android:textColor="@color/white"/>
-
-                        <EditText
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@color/white"
-                            android:layout_marginBottom="2dp"
-                            android:padding="2dp"
-                            android:singleLine="true"
-                            android:id="@+id/editText2"
-                            android:layout_column="1" />
-                    </TableRow>
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@color/bg_login">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:text="@string/certified_leader"
-                            android:id="@+id/textViewCertified_leader"
-                            android:layout_column="0"
-                            android:textColor="@color/white"
-                            android:layout_marginBottom="3dp" />
-
-                        <EditText
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@color/white"
-                            android:layout_marginBottom="3dp"
-                            android:padding="2dp"
-                            android:singleLine="true"
-                            android:id="@+id/editText19"
-                            android:layout_column="1" />
-                    </TableRow>
 
                     <TableRow
                         android:layout_width="match_parent"
@@ -1051,6 +956,7 @@
                                 android:layout_height="wrap_content"
                                 android:text="@string/not_certified"
                                 android:id="@+id/radioButton_Not_certified" />
+
                         </LinearLayout>
 
                     </TableRow>
